@@ -1,2 +1,2 @@
 #!/usr/bin/env python3
-from beancount.scripts.query import main; main()
+from beancount.query.shell import main; main()
