@@ -153,4 +153,31 @@ class TestUseCases(unittest.TestCase):
         ## FIXME: Here we need to finally support FLATTEN to make this happen properly.
 
 
+class TestShell(test_utils.TestCase):
+
+    @test_utils.docfile
+    def test_success(self, filename):
+        """
+        2013-01-01 open Assets:Account1
+        2013-01-01 open Assets:Account2
+        2013-01-01 open Assets:Account3
+        2013-01-01 open Equity:Unknown
+
+        2013-04-05 *
+          Equity:Unknown
+          Assets:Account1     5000 USD
+
+        2013-04-05 *
+          Assets:Account1     -3000 USD
+          Assets:Account2        30 BOOG {100 USD}
+
+        2013-04-05 *
+          Assets:Account1     -1000 USD
+          Assets:Account3       800 EUR @ 1.25 USD
+        """
+        with test_utils.capture('stdout', 'stderr') as (stdout, _):
+            test_utils.run_with_args(shell.main, [filename, "SELECT 1;"])
+        self.assertTrue(stdout.getvalue())
+
+
 __incomplete__ = True
